force-app/main/default/objects/CarbonCredit__c/CarbonCredit__c.object-meta.xml
<CustomObject>
    <description>Represents a carbon credit issued for sustainability projects</description>
    <label>Carbon Credit</label>
    <nameField>
        <label>Carbon Credit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carbon Credits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>