force-app/main/default/objects/CarbonCredit__c/fields/CreditAmount__c.field-meta.xml
<CustomField>
    <fullName>CreditAmount__c</fullName>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
    <inlineHelpText>optional</inlineHelpText>
    <required>true</required>
    <description>Amount</description>
    <label>Credit Amount</label>
</CustomField>