force-app/main/default/objects/CarbonCredit__c/fields/CreditValue__c.field-meta.xml
<CustomField>
    <fullName>CreditValue__c</fullName>
    <description>Unique identifier for each carbon credit issued.</description>
    <inlineHelpText>This number is automatically assigned when a new carbon credit record is created.</inlineHelpText>
    <label>Credit Value</label>
    <type>AutoNumber</type>
</CustomField>