force-app/main/default/objects/CarbonCredit__c/fields/DateRecorded__c.field-meta.xml
<CustomField>
    <fullName>DateRecorded__c</fullName>
    <type>Date</type>
    <inlineHelpText>The date this credit was recorded</inlineHelpText>
    <required>true</required>
    <description>The date this credit was recorded</description>
    <label>Date Recorded</label>
</CustomField>