force-app/main/default/objects/CarbonCredit__c/fields/ExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>ExpiryDate__c</fullName>
    <description>Date the credit expires</description>
    <inlineHelpText>Enter the expiry date of the credit</inlineHelpText>
    <label>Expiry Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>