force-app/main/default/objects/CarbonCredit__c/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <description>Date the credit is issued</description>
    <inlineHelpText>Enter the issue date of the credit</inlineHelpText>
    <label>Issue Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>