force-app/main/default/objects/CarbonCredit__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Partner organization receiving the credit</description>
    <inlineHelpText>Select the partner associated with this credit</inlineHelpText>
    <label>Partner</label>
    <referenceTo>CarbonCredit__c</referenceTo>
    <relationshipLabel>Carbon Credits</relationshipLabel>
    <relationshipName>CarbonCredits_Partner</relationshipName>
    <type>Lookup</type>
</CustomField>