force-app/main/default/objects/CarbonCredit__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Associated project</description>
    <inlineHelpText>Select the sustainability project for this credit</inlineHelpText>
    <label>Project</label>
    <referenceTo>CarbonCredit__c</referenceTo>
    <relationshipLabel>Carbon Credits</relationshipLabel>
    <relationshipName>CarbonCredits_Project</relationshipName>
    <type>Lookup</type>
</CustomField>