force-app/main/default/objects/CarbonCredit__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Origin of the carbon credit</description>
    <externalId>true</externalId>
    <inlineHelpText>optional</inlineHelpText>
    <label>Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>