force-app/main/default/objects/CarbonCredit__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of carbon credit</description>
    <inlineHelpText>optional</inlineHelpText>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Awareness</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Renewable</fullName>
                <default>true</default>
                <label>Renewable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>